# icom-lan

./: .gitignore  .rag-update.sh  404.html  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  PYPI_RELEASE_CHECKLIST.md  README.md  RELEASE_NOTES.md  ROADMAP.md  coverage.json  hatch_build.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  run-dev.sh  sitemap.xml
.backups/: ROADMAP.md.bak-2026-02-26-0108  ic7300.toml.bak  ic7610.toml.bak  test_audio_integration.py.bak  test_radio_integration.py.bak
.claude/commands/: audit-ui.md  decompose-issue.md  release.md  scan-issues.md  solve-issue.md
.githooks/: post-commit  post-merge
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  epic.yml  feature.yml  ui-component.yml
.github/workflows/: agent-review-gate.yml  docs.yml  full.yml  publish.yml  quick.yml  test.yml
AUDIO_STREAMING_PROFILE/: index.html
CHANGELOG/: index.html
EXTENDED_PROTOCOL_RESEARCH/: index.html
PERFORMANCE/: index.html
PROJECT/: index.html
RELEASE_READINESS/: index.html
ROADMAP/: index.html
SECURITY/: index.html
STRATEGY/: index.html
api/audio/: index.html
api/auth/: index.html
api/backends/: index.html
api/backends-icom7610/: index.html
api/backends-icom7610-drivers/: index.html
api/commander/: index.html
api/commands/: index.html
api/exceptions/: index.html
api/public-api-surface/: index.html
api/radio/: index.html
api/radios/: index.html
api/rig-loader/: index.html
api/rigctld/: index.html
api/scope/: index.html
api/sync/: index.html
api/transport/: index.html
api/types/: index.html
api/web/: index.html
audits/ic7300-profile-audit/: index.html
audits/ic7610-profile-audit/: index.html
audits/ic7610-ui-coverage/: index.html
capabilities-matrix/: index.html
config/: mcporter.json
docs/: CHANGELOG.md  PERFORMANCE.md  PROJECT.md  RELEASE_READINESS.md  ROADMAP.md  SECURITY.md  STRATEGY.md  capabilities-matrix.md  index.md  opuslib-macos-fix.md  radio-protocol.md  robots.txt
docs/api/: audio.md  auth.md  backends-icom7610-drivers.md  backends-icom7610.md  backends.md  commander.md  commands.md  exceptions.md  public-api-surface.md  radio.md  radios.md  rig-loader.md  rigctld.md  scope.md  sync.md  transport.md  types.md  web.md
docs/architecture/: open-core-policy.md
docs/audits/: ic7300-profile-audit.md  ic7610-profile-audit.md  ic7610-ui-coverage.md
docs/guide/: audio-recipes.md  cli.md  commands.md  configuration.md  connection.md  ic705-usb-setup.md  ic7300-usb-setup.md  ic7610-usb-setup.md  ic9700-usb-setup.md  installation.md  profiles.md  quickstart.md  radios.md  rig-profiles.md  troubleshooting.md  web-ui.md  wsjtx-setup.md
docs/i18n/: locale-contract.md
docs/internals/: architecture.md  cli-design.md  contributing.md  raw-civ-transactions.md  reliability-semantics.md  rfc-audio-v1-mini.md  rfc-web-ui-v1.md
docs/overrides/: main.html
docs/parity/: README.md  ic7610_command_matrix.json  test_mapping.md
docs/plans/: 2026-03-04-mobile-ui-design.md  2026-03-04-mobile-ui-plan.md  2026-03-07-ui-architecture-research.md  2026-03-07-ui-architecture.md  2026-04-05-desktop-companion-architecture.md  2026-04-09-audio-backend-design.md  2026-04-11-frontend-migration-plan.md  2026-04-11-parity-matrix.md  2026-04-11-presentation-architecture.md  2026-04-11-rx-audio-trace.md  2026-04-11-shared-frontend-runtime-contract.md  2026-04-11-v2-lcd-runtime-audit.md  2026-04-12-target-frontend-architecture.md  2026-04-18-desktop-meters-panel.md  2026-04-18-lcd-display-enhancements.md  2026-04-18-mobile-ia.md  2026-04-18-receiver-activation.md  2026-04-18-spectrum-controls.md  2026-04-18-ui-refinements-execution.md  2026-04-19-lcd-layout-redesign-v2.md  2026-04-19-lcd-layout-redesign.md  2026-04-29-modularization-plan.md  2026-04-29-panel-adapter-migration.md  2026-04-29-ui-v1-deprecation-audit.md  2026-05-08-audio-capability-probing.md  fix-civ-rx-tests-and-mypy.md  fix-p0-test-failures.md  mypy-remaining-errors.md  p0-core-runtime-decomposition.md  p1-radio-protocol-slim-plan.md
docs/releases/: v0.11.0-RELEASE-NOTES.md
docs/research/: ic705-research.md
docs/reviews/: 2026-03-07-sprint0-review.md  2026-03-07-sprint1-review.md  2026-03-08-sprint2-review.md  2026-03-08-sprint3-review.md  2026-03-08-sprint4-review.md  2026-03-09-p1-p2-review.md  2026-03-09-p3-review.md  (+6 more)
frontend/: README.md  TOKENIZATION_SUMMARY.md  TROUBLESHOOTING.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
issues-dump/: index.html
logs/: .gitkeep  README.md
mockups/: v2.html
opuslib-macos-fix/: index.html
parity/: ic7610_command_matrix.json  index.html
plans/: 2026-04-12-architecture-presentation.html
radio-protocol/: index.html
references/: s-meter-demo.html  s-meter.js
rigs/: _keyboard-default.toml  _schema.md  _schema_v2.md  _template.toml  ftx1.toml  ic705.toml  ic7300.toml  ic7610.toml  ic9700.toml  tx500.toml  x6100.toml  x6200.toml
scripts/: patch_opuslib_macos.py
search/: search_index.json
site/: index.html  objects.inv  sitemap.xml
tests/: _audio_stream_fake.py  _caps.py  _command_test_helpers.py  _helpers.py  _perf_helpers.py  conftest.py  fake_rigctld.py  mock_server.py  test_audio.py  test_audio_analyzer.py  test_audio_backend.py  test_audio_bridge.py  test_audio_bridge_stereo.py  test_audio_buffer_pool.py  test_audio_bus.py  test_audio_codec.py  test_audio_codecs.py  test_audio_config.py  test_audio_dsp.py  test_audio_fft_scope.py  test_audio_fullduplex.py  test_audio_probe.py  test_audio_probe_runner.py  test_audio_recovery.py  test_audio_resample.py  test_audio_rx_tx_transition.py  test_audio_stress.py  test_audio_transcoder.py  test_audio_transcoder_coverage.py  test_audio_watchdog.py  test_audit.py  test_auth.py  test_auth_token_comparison.py  test_backend_contract_matrix.py  test_backend_factory.py  test_bounded_queue.py  test_bsr_band_switching.py  test_circuit_breaker.py  test_civ.py  test_civ_command_profiling.py  (+165 more)
(+874 files in other folders)
