[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icom-lan"
version = "0.10.0"
description = "Python library for controlling Icom transceivers over LAN (UDP) — no wfview/hamlib required"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sergey Morozik", email = "morozsm@gmail.com" },
]
keywords = ["icom", "ham-radio", "amateur-radio", "transceiver", "ci-v", "ic-7610", "ic-705"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Communications :: Ham Radio",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/morozsm/icom-lan"
Documentation = "https://morozsm.github.io/icom-lan/"
Repository = "https://github.com/morozsm/icom-lan"
Issues = "https://github.com/morozsm/icom-lan/issues"

[project.scripts]
icom-lan = "icom_lan.cli:main"

[project.optional-dependencies]
audio = ["opuslib"]
scope = [
    "pillow>=10.0",
]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-timeout", "ruff"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.3",
    "mkdocstrings[python]>=1.0.3",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests requiring real radio hardware (skip if not configured)",
    "e2e: end-to-end tests for PCM API and CLI audio workflows",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
